# turtle_vlm_ws

./: .gitignore  README.md  frames.gv
src/turtle_vlm_chat/: CMakeLists.txt  package.xml
src/turtle_vlm_chat/config/: destination.yaml  perception_config.yaml
src/turtle_vlm_chat/models/: download_models.sh
src/turtle_vlm_chat/scripts/: action_dictionary.json  chatGUI_SR.py  commands_parser.py  destination_resolver.py  llm_interface.py  llm_node.py  llm_to_goal_node.py  vlm_node_yolo.py
src/turtle_vlm_chat/srv/: SeenObjects.srv
src/turtle_vlm_gazebo/: CMakeLists.txt  package.xml
src/turtle_vlm_gazebo/config/: turtlebot_nav_config.rviz
src/turtle_vlm_gazebo/launch/: nav_sim.launch  turtlebot_world.launch
src/turtle_vlm_perception/: CMakeLists.txt  package.xml
src/turtlebot3_description_custom/: CMakeLists.txt  package.xml
src/turtlebot3_description_custom/urdf/: turtlebot3_burger_with_realsense.urdf.xacro
