<?xml version="1.0"?>
<package format="2">
  <name>turtle_vlm_chat</name>
  <version>0.0.0</version>
  <description>The turtle_vlm_chat package</description>

  <maintainer email="anujith@todo.todo">anujith</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core Dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Optional GUI Support -->
  <build_depend>python_qt_binding</build_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <export>
  </export>
</package>