<package format="2">
  <name>turtle_vlm_gazebo</name>
  <version>0.0.1</version>
  <description>Simulation of TurtleBot3 in CPS world for VLM/LLM research</description>

  <maintainer email="anujith@todo.todo">anujith</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for simulation and TurtleBot -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>turtlebot3_description</depend>

  <export>
    <!-- Required for gazebo_ros integration -->
  </export>
</package>